k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-web
  namespace: wedding
spec:
  selector:
    app: wedding-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
